[project]
name = "payment-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.0",
    "requests",
    "pycryptodome",
    "paytmchecksum"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "services*","utils*"]
